--- a/templates/shopping/snippets/edge_panel.html
+++ b/templates/shopping/snippets/edge_panel.html
@@ -51,6 +51,9 @@
                         {% if about_page %}
                             <li><a href="{% url 'flatpage' about_page.url %}">{{ about_page.title }}</a></li>
                         {% endif %}
+                        {% if is_allowed %}
+                            <li><a href="{% url 'shopping:display_device_dimension' %}">{% trans 'Debug' %}</a></li>
+                        {% endif %}
                         {% if not user.is_authenticated %}
                             <li><a href="{% url 'ikwen:sign_in' %}">{% trans "Login" %}</a></li>
                         {% endif %}
