Updated cart to highlight the delivery option box when one clicks Checkout without choosing a delivery option

--- a/templates/shopping/optimum/cart.html
+++ b/templates/shopping/optimum/cart.html
@@ -8,7 +8,7 @@
 
 {% block head_style %}
     {{ block.super }}
-    <link href="{% static 'kakocase/css/cart.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'kakocase/css/cart.css' %}?v=20.12.23" rel="stylesheet" type="text/css">
     <link href="{% static 'ikwen/css/console.css' %}" media="screen" rel="stylesheet" type="text/css" />
     <style>
         #coupons .progress {margin: 0}
@@ -204,6 +204,11 @@
             </div>
         </div>
     </div>
+    <div id="choose-delivery-overlay">
+        <div class="text-has-shade text-center visible-xs visible-sm">
+            <p>{% trans "Please click on the delivery option of your choice" %}</p>
+        </div>
+    </div>
     {% include 'shopping/snippets/modal_suggest_login.html' %}
     {% url 'shopping:checkout' as checkout_url %}
     <form id="start-checkout" action="{% if user.is_authenticated %}{{ checkout_url }}{% endif %}">
@@ -219,7 +224,7 @@
     {{ block.super }}
     <script>
         (function() {
-            var promoRate = 0;
+            let promoRate = 0;
             $('.input-group.promo').hide();
             {% if order %}  {#  *** RETURNING TO THIS PAGE AFTER A COMPLETE CHECKOUT ***  #}
                 {% if not order.is_more_than_one_hour_old %}
@@ -229,24 +234,24 @@
                     {% endif %}
                 {% endif %}
             {% else %}
-                var currency = simpleCart.currency().symbol,
+                let currency = simpleCart.currency().symbol,
                     minCheckout = parseFloat($('#checkout-min').text()),
                     itemsPackingQty = 0,
                     deliveryPackingCost = {{ max_delivery_packing_cost }},
                     itemsPackingCost = 0,
                     totalPackingCost = 0;
                 $('body').on('click', '.value-plus1', function() {
-                    var id = $(this).data('id'),
+                    let id = $(this).data('id'),
                         item = simpleCart.find({'id': id})[0],
                         max = $(this).data('max');
-                    var divUpd = $(this).parent().find('.value1'), newVal = parseInt(divUpd.text(), 10) + 1;
+                    let divUpd = $(this).parent().find('.value1'), newVal = parseInt(divUpd.text(), 10) + 1;
                     if (newVal > max) {
                         ikwen.showFloatingNotice("{% trans "Available stock limit reached." %}", "", 3);
                         return;
                     }
                     item.increment();
                     simpleCart.update();
-                    var packing = parseFloat(item.get('packing'));
+                    let packing = parseFloat(item.get('packing'));
                     if (packing > 0) {
                         itemsPackingQty += 1;
                         itemsPackingCost += packing;
@@ -257,12 +262,12 @@
                     $('.cart-item.packing .item_quantity span').text(itemsPackingQty);
                     loadCheckoutSummary();
                 }).on('click', '.value-minus1', function() {
-                    var id = $(this).data('id'),
+                    let id = $(this).data('id'),
                         item = simpleCart.find({'id': id})[0];
                     if (item.quantity() === 1) return;
                     item.decrement();
                     simpleCart.update();
-                    var packing = parseFloat(item.get('packing'));
+                    let packing = parseFloat(item.get('packing'));
                     if (packing > 0) {
                         itemsPackingQty -= 1;
                         itemsPackingCost -= packing;
@@ -273,7 +278,7 @@
                     $('.cart-item.packing .item_quantity span').text(itemsPackingQty);
                     loadCheckoutSummary();
                 }).on('click', '.close1', function() {
-                    var $cartItem = $(this).parents('.cart-item'),
+                    let $cartItem = $(this).parents('.cart-item'),
                         id = $(this).data('id'),
                         item = simpleCart.find({'id': id})[0];
                     item.remove();
@@ -283,7 +288,7 @@
                     });
                     loadCheckoutSummary();
                 }).on('click', '.apply-promo-code', function() {
-                    var code = $('.promo').find('input[type=text]').val();
+                    let code = $('.promo').find('input[type=text]').val();
                        $.getJSON("{% url 'sales:find_promo_code' %}", {code: code}, function(resp) {
                         if (resp.error) {
                             $(".invalid-code").fadeIn().show();
@@ -299,7 +304,7 @@
                 }).on('keypress', '.promo input[type=text]',function () {
                     $(".invalid-code").fadeOut().hide()
                 }).on('click', '#check-packing', function() {
-                    var buyPacking = $('#check-packing').prop('checked'),
+                    let buyPacking = $('#check-packing').prop('checked'),
                         itemsCost = parseFloat($('#items-summary').data('total')),
                         $delOpt = $('.delivery-option.active'),
                         deliveryCost = 0,
@@ -324,7 +329,7 @@
                     simpleCart.load();
                     $('.cart-item:not(.tpl, .packing)').remove();
                     simpleCart.each(function(item) {
-                        var _item = item,
+                        let _item = item,
                             url = item.get('url'),
                             size = item.get('size'),
                             packingCost = item.get('packing'),
@@ -370,7 +375,7 @@
                             }
                         });
                     });
-                    var $packageItem = $('.cart-item.packing');
+                    let $packageItem = $('.cart-item.packing');
                     $packageItem.find('.item_quantity span').text(itemsPackingQty);
                     totalPackingCost = itemsPackingCost + deliveryPackingCost;
                     $packageItem.find('.subtotal').html(currency + ' ' + totalPackingCost.formatMoney({{ CURRENCY.precision }}, '{{ settings.THOUSAND_SEPARATOR }}', '{{ settings.DECIMAL_SEPARATOR }}'));
@@ -384,14 +389,14 @@
                     loadCheckoutSummary();
                 }
                 function loadCheckoutSummary() {
-                    var itemsCount = simpleCart.quantity(),
+                    let itemsCount = simpleCart.quantity(),
                         itemsCost = simpleCart.total(),
                         couponId = $('#coupon-id').val(),
                         delOptId = $('.delivery-option.active').data('id'),
                         query = '?items_count=' + itemsCount + '&items_cost=' + itemsCost + '&packing_cost=' + totalPackingCost + '&coupon_id=' + couponId,
                         buyPacking = $('#check-packing').prop('checked');
                     if (buyPacking) query += '&buy_packing=yes';
-                    var url = '{% url 'shopping:load_checkout_summary' %}' + query;
+                    let url = '{% url 'shopping:load_checkout_summary' %}' + query;
                     if (delOptId) url += '&delivery_option_id=' + delOptId;
                     $('div#checkout-summary .spinner').fadeIn();
                     $('div#checkout-summary .content').load(url, function() {
@@ -404,7 +409,7 @@
                     else $('.alert.min-checkout').addClass('hide');
                 }
                 {% if user.is_anonymous %}
-                    var anonymousBuyerId = localStorage.getItem('anonymousBuyerId');
+                    let anonymousBuyerId = localStorage.getItem('anonymousBuyerId');
                     if (anonymousBuyerId) {
                         $('#anonymous-buyer-id').val(anonymousBuyerId);
                     }
@@ -412,7 +417,7 @@
                 $('#checkout-summary').on('click', '.delivery-option', function() {
                     $('.delivery-option').removeClass('active');
                     $(this).addClass('active');
-                    var delOptId = $(this).data('id'),
+                    let delOptId = $(this).data('id'),
                         delOptType = $(this).data('type'),
                         itemsCost = parseFloat($('#items-summary').data('total')),
                         deliveryCost = parseFloat($(this).data('cost')),
@@ -428,7 +433,7 @@
                         $('.cart-item.packing').removeClass('no');
                     } else {
                         $('#check-packing').prop('disabled', false);
-                        var buyPacking = $('#check-packing').prop('checked');
+                        let buyPacking = $('#check-packing').prop('checked');
                         if (buyPacking) total += totalPackingCost;
                     }
                     $('div#delivery .price .currency').html(simpleCart.currency().symbol);
@@ -436,11 +441,11 @@
                     $('.co.total .price .val').text(total.formatMoney({{ CURRENCY.precision }}, '{{ settings.THOUSAND_SEPARATOR }}', '{{ settings.DECIMAL_SEPARATOR }}'));
                     $('#delivery-option-id').val(delOptId)
                 }).on('click', '.start-checkout', function() {
-                    var deliveryOptionId = $('.delivery-option.active').data('id'),
+                    let deliveryOptionId = $('.delivery-option.active').data('id'),
                         paymentMeanSlug = $(this).data('slug'),
                         isCashFlex = $(this).data('is_cashflex');
                     if (!deliveryOptionId) {
-                        $('#warning-delivery-location').modal('show');
+                        highlightChooseDelivery();
                         return false;
                     }
                     if (isCashFlex) {
@@ -459,13 +464,13 @@
                 }).on('click', '.promo-code', function () {
                     $(this).remove();
                     $('.input-group.promo').show();
-                });
+                }).on('click', '.hide-del-option-choice', quitDeliveryChoiceHighlight);;
 
                 {# *** START CHECKOUT PROCESS *** #}
                 {% url 'shopping:checkout' as checkout_url %}
                 {% url 'ikwen:sign_in' as sign_in_url %}
                 $('div#suggest-login .register').click(function() {
-                    var actionUrl = '{% url 'ikwen:register' %}',
+                    let actionUrl = '{% url 'ikwen:register' %}',
                         deliveryOptionId = $('.delivery-option.active').data('id');
                     $('#next').val('{{ checkout_url }}');
                     $('#delivery-option-id').val(deliveryOptionId);
@@ -473,7 +478,7 @@
                     return false;
                 });
                 $('div#suggest-login .connect').click(function () {
-                    var actionUrl = '{{ sign_in_url }}',
+                    let actionUrl = '{{ sign_in_url }}',
                         deliveryOptionId = $('.delivery-option.active').data('id');
                     $('#next').val('{{ checkout_url }}');
                     $('#delivery-option-id').val(deliveryOptionId);
@@ -481,7 +486,7 @@
                     return false;
                 });
                 $('div#suggest-login .turn-down').click(function() {
-                    var actionUrl = '{{ checkout_url }}',
+                    let actionUrl = '{{ checkout_url }}',
                         deliveryOptionId = $('.delivery-option.active').data('id');
                     $('#delivery-option-id').val(deliveryOptionId);
                     $('form#start-checkout').attr('action', actionUrl).submit();
@@ -489,14 +494,14 @@
                 });
             {% endif %}
 
-            var couponSwiper = new Swiper('#coupons .swiper-container', {
+            let couponSwiper = new Swiper('#coupons .swiper-container', {
                 slidesPerView: 'auto',
                 nextButton: '.swiper-button-next',
                 prevButton: '.swiper-button-prev'
             });
 
             $('body').on('click', '.coupon-img', function() {
-                var id = $(this).data('id');
+                let id = $(this).data('id');
                 {#$.getJSON('http://localhost/tchopetyamo/rewarding/coupon_detail', {id: id}, function(data) {#}
                 $.getJSON('rewarding/coupon_detail', {id: id}, function(data) {
                     if (data.error) {
@@ -517,12 +522,23 @@
                     $('.card-ul .swiper-slide').removeClass('use-coupon')
                     $('#coupon-id').val('')
                     $(this).addClass('use-coupon')
-                    var couponId = $(this).data('coupon-id')
+                    let couponId = $(this).data('coupon-id')
                     $('#coupon-id').val(couponId)
                 }
             })
-
             $('.cart-shopping').addClass('hide');
+            function highlightChooseDelivery() {
+                $('#delivery.co').addClass('highlight');
+                $('body').addClass('show-highlight');
+                $('.hide-del-option-choice').show();
+                $('#choose-delivery-overlay').fadeIn();
+            }
+            function quitDeliveryChoiceHighlight() {
+                $('#delivery.co').removeClass('highlight');
+                $('body').removeClass('show-highlight');
+                $('.hide-del-option-choice').hide();
+                $('#choose-delivery-overlay').fadeOut();
+            }
         })()
     </script>
 {% endblock %}
